samples/_failures_safe/1761342286_45a994_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_58825b00.c: In function ‘main’:
./samples/SAFE/__tmp_58825b00.c:166:12: error: missing terminating " character
  166 |     printf("%-12s %-15s %-6s %-6
      |            ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_58825b00.c:166:5: error: expected expression at end of input
  166 |     printf("%-12s %-15s %-6s %-6
      |     ^~~~~~
./samples/SAFE/__tmp_58825b00.c:166:5: error: expected declaration or statement at end of input
